--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/67e4952504.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/index.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Test Website</title>
+  <title>Home | Wilson's Website</title>
 </head>
 <body>
 
