--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   
   <h1>Welcome To My Website!</h1>
 
+  
+  <div class="maintext">
+    <p>Hello I am a programmer that mainly makes websites.</p>
+  </div>
+
 
 
 
