--- a/about-me.html
+++ b/about-me.html
@@ -11,7 +11,7 @@
   <script src="https://kit.fontawesome.com/67e4952504.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/about-me.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Test Website</title>
+  <title>About Me | Wilson's Website</title>
 </head>
 <body>
   
