--- a/current-projects.html
+++ b/current-projects.html
@@ -5,15 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Contact | Wilson's Website" />
+  <meta name="Description" content="Current Projects | Wilson's Website" />
   <link rel="stylesheet" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/67e4952504.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/index.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Contact | Wilson's Website</title>
+  <title>Current Projects | Wilson's Website</title>
 </head>
 <body>
+
 
 
 
