--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
   <title>Home | Wilson's Website</title>
 </head>
 <body>
-
+  <div class="about-button">
+    <a href="about-me.html" target="_blank"><button class="center-button"><i class="fas fa-user"></i> About Me</button></a>
+  </div>
+  <div class="what-im-working-on">
+    <a href="current-projects.html" target="_blank"><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
+  </div>
   
   
   <h1>Welcome To My Website!</h1>
-
+  
   
   <div class="maintext">
     <p>Hello I am a programmer that mainly makes websites.</p>
