--- a/about-me.html
+++ b/about-me.html
@@ -18,7 +18,7 @@
 <h1>About Me</h1>
 <h2>Who Am I?</h2>
 <div class="main1">
-    <p>I am a coder that mainly codes websites. The languages I know are: HTML, CSS, JavaScript, Python and C</p>
+    <p>Hello my name is Wilson. I am a computer science and information technologies student. I mainly develop wesites but I also make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
 </div>
 
 
