--- a/about-me.html
+++ b/about-me.html
@@ -14,6 +14,15 @@
   <title>About Me | Wilson's Website</title>
 </head>
 <body>
+  <div class="about-button">
+    <a href="index.html"><button class="center-button"><i class="fas fa-house-user"></i> Home</button></a>
+  </div>
+  <div class="what-im-working-on">
+    <a href="current-projects.html" ><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
+  </div>
+  <div class="contact">
+    <a href="current-projects.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
+  </div>
   
 <h1>About Me</h1>
 <h2>Who Am I?</h2>
