--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
 </head>
 <body>
   <div class="about-button">
-    <a href="about-me.html" target="_blank"><button class="center-button"><i class="fas fa-user"></i> About Me</button></a>
+    <a href="about-me.html"><button class="center-button"><i class="fas fa-user"></i> About Me</button></a>
   </div>
   <div class="what-im-working-on">
-    <a href="current-projects.html" target="_blank"><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
+    <a href="current-projects.html"><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
+  </div>
+  <div class="contact">
+    <a href="current-projects.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
+  </div>
+  <h1></h1>
+  <div class="ree">
+    <img src="/img/ree.png" width="1000px" class="center" alt="im guessing this didnt load">
   </div>
   
-  
-  <h1>Welcome To My Website!</h1>
-  
-  
   <div class="maintext">
-    <p></p>
+    <p>Hi</p>
   </div>
 
 
