--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Home | Wilson's Website" />
+  <meta name="Description" content="Wilson W" />
   <link rel="stylesheet" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/67e4952504.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/index.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Home | Wilson's Website</title>
+  <title>Wilson W</title>
 </head>
 <body>
-  <div class="about-button">
-    <a href="about-me.html"><button class="center-button"><i class="fas fa-user"></i> About Me</button></a>
   </div>
   <div class="what-im-working-on">
     <a href="current-projects.html"><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
@@ -29,7 +27,7 @@
   </div>
   
   <div class="maintext">
-    <p>Hi</p>
+    <p>Hello my name is Wilson. I am a computer science and information technologies student. I mainly develop wesites but I also make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
   </div>
 
 
