--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   
   <div class="maintext">
-    <p>Hello my name is Wilson. I am a computer science and information technologies student. I mainly develop wesites but I also make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
+    <p>Hello my name is Wilson. I am a computer science and information technologies student. I like to game and code! I mainly develop wesites but I also make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
   </div>
 
 
