--- a/current-projects.html
+++ b/current-projects.html
@@ -19,7 +19,7 @@
   <a href="index.html"><button class="center-button"><i class="fas fa-house-user"></i> Home</button></a>
 </div>
 <div class="contact">
-  <a href="current-projects.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
+  <a href="contact-me.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
 </div>
 <h1><u>What I'm Working On</u></h1>
 <div class="fpswebsite">
