--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Description" content="Wilson W" />
+  <meta name="Description" content="Wilson Warrington" />
   <link rel="stylesheet" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/67e4952504.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/index.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Wilson W</title>
+  <title>Wilson Warrington</title>
 </head>
 <body>
   </div>
@@ -19,7 +19,7 @@
     <a href="current-projects.html"><button class="center-button"><i class="far fa-lightbulb"></i> What Im Working On</button></a>
   </div>
   <div class="contact">
-    <a href="current-projects.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
+    <a href="contact-me.html"><button class="center-button"><i class="fas fa-phone"></i> Contact Me</button></a>
   </div>
   <h1></h1>
   <div class="ree">
@@ -27,7 +27,8 @@
   </div>
   
   <div class="maintext">
-    <p>Hello my name is Wilson. I am a computer science and information technologies student. I like to game and code! I mainly develop wesites but I also make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
+    <p>Hello my name is Wilson. I am a computer science and information technologies student. I like to game and code! I mainly develop wesites but I also like to make discord bots. The languages I know are HTML, CSS, JavaScript, Python and C.</p>
+    <p>I also work for <a target="_blank" href="https://twitter.com/dev_footprint">Footprint Studios</a> a small game development company which is working on a game called 'Take To The Skies' which is based on space exploration and flight.</p>
   </div>
 
 
