--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   
   <div class="maintext">
     <p>Hello my name is Wilson. I am a computer science and information technologies student. I like to game and code! I mainly develop wesites but I also like to make discord bots. The languages I know are HTML, CSS, JavaScript and Python.</p>
-    <p>I also work for <a target="_blank" href="https://twitter.com/dev_footprint">Footprint Studios</a> a small game development company which is working on a game called 'Take To The Skies' which is based on space exploration and flight.</p>
+    <p>I also work for <a target="_blank" href="https://github.com/Footprint-Studios">Footprint Studios</a> a small game development company which is working on a game called 'Take To The Skies' which is based on space exploration and flight.</p>
   </div>
 
 
