--- a/contact-me.html
+++ b/contact-me.html
@@ -23,8 +23,8 @@
 </div>
 <h1><u>Contact Me Here</u></h1>
 <div class="text">
-  <p>If you would like to contact me you can send me a message to my email address:</p>
-  <p><b>wilsonwarrington@gmail.com</b></p>
+  <p>If you would like to contact me you can send me a message on discord:</p>
+  <p><b>KingWilson#9208</b></p>
 </div>
 
 
