--- a/links.html
+++ b/links.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/4c33391873.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="/css/links.css">
   <link rel="icon" href="/img/logo.png">
-  <title>Home • Wilson</title>
+  <title>Links</title>
 </head>
 
 <body>
@@ -24,11 +24,10 @@
       </div>
     </div>
 
-    <h1>Hi I'm Wilson</h1>
-    
+    <h1>Links</h1>
+    <h2><i class="fa-brands fa-discord"></i> @kingwilson</h2>
+    <h2><a href="https://github.com/King-Wilson"><i class="fa-brands fa-github"></i> KingWilson</h2>
 
 
 
-
-
-  </body>
+</body>
