Cleaned up code and started footer

--- a/links.html
+++ b/links.html
@@ -17,13 +17,12 @@
 
 <body>
   <header>
-
     <div class="navbar">
       <a href="/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
       <a href="/links.html"><i class="fa-solid fa-link"></i> Links</a>
       </div>
     </div>
-
+  </header>
     <h1>Links</h1>
     <h2><i class="fa-brands fa-discord"></i> @kingwilson</h2>
     <h2><a href="https://github.com/King-Wilson"><i class="fa-brands fa-github"></i> KingWilson</h2>
