--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
 
 <body>
   <header>
-
     <div class="navbar">
       <a href="/index.html"><i class="fa fa-fw fa-home"></i> Home</a>
       <a href="/links.html"><i class="fa-solid fa-link"></i> Links</a>
       </div>
     </div>
-
+  </header>
     <h1>Hi</h1>
     
     <p>Things will go here at some point</p>
 
 
+
+    <div class="footer">
+      <footer>
+        <p>&copy; 2023. All rights reserved.</p>
+      </footer>
+    </div>
+    
 
 
 
