--- a/links.html
+++ b/links.html
@@ -23,9 +23,21 @@
       </div>
     </div>
   </header>
-    <h1>Links</h1>
-    <h2><i class="fa-brands fa-discord"></i> @kingwilson</h2>
-    <h2><a href="https://github.com/King-Wilson"><i class="fa-brands fa-github"></i> KingWilson</h2>
+  <h1>Links</h1>
+  <h2><i class="fa-brands fa-discord"></i> @kingwilson</h2>
+  <h2><a href="https://github.com/King-Wilson"><i class="fa-brands fa-github"></i> KingWilson</h2>
+
+
+
+
+  <div class="footer">
+    <footer>
+      <p>&copy; 2023 Wilson Warrington. All rights reserved.</p>
+    </footer>
+  </div>
+
+
+
 
 
 
