--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
     <h1>Welcome</h1>
     
-    <p>Hello my name is Wilson. Im currently studying Maths, Physics and Computer Science at A Level.</p>
+    <p>Hello my name is Wilson. I'm currently studying Maths, Physics and Computer Science at A Level.</p>
 
 
     
